--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.5
   http: ^1.4.0
   dropdown_search: ^5.0.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
